--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -217,7 +217,7 @@ ul#nav li.current a {
 
 #about a,
 #about a:visited {
-  color: #fff;
+  color: #636363;
 }
 #about a:hover,
 #about a:focus {
@@ -267,7 +267,7 @@ ul#nav li.current a {
 /* ------------------------------------------------------------------ */
 
 #resume {
-  background: #fff;
+  background: #2b2b2b;
   padding-top: 90px;
   padding-bottom: 72px;
   overflow: hidden;
@@ -293,6 +293,7 @@ ul#nav li.current a {
 }
 #resume h3 {
   font: 25px/30px "opensans-bold", sans-serif;
+  color: #fff;
 }
 
 #resume .header-col {
@@ -301,7 +302,11 @@ ul#nav li.current a {
 #resume .main-col {
   padding-right: 10%;
 }
-
+.company-title {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
 .education,
 .work {
   margin-bottom: 48px;
@@ -326,8 +331,62 @@ ul#nav li.current a {
 /*----------------------------------------------*/
 /*	Skill Bars
 /*----------------------------------------------*/
-
-.bars {
+.skill {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 25px;
+}
+.skill-lable {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.skill-title {
+  float: right;
+  margin-top: -6px;
+  line-height: 24px;
+  font-weight: 400;
+  font-size: 1.2rem;
+}
+.skill-icon {
+  margin-right: 5px;
+}
+.skill-progress {
+  flex: 1;
+  max-width: 300px;
+  height: 10px;
+  position: relative;
+}
+.skill-progress-outer {
+  height: 100%;
+  width: 100%;
+  background: #3a4149;
+  border-radius: 2px;
+}
+.skill-progress-inner {
+  position: absolute;
+  background: #11abb0;
+  border: none;
+  height: 100%;
+  -webkit-border-top-left-radius: 2px;
+  -webkit-border-bottom-left-radius: 2px;
+  -moz-border-radius-topleft: 2px;
+  -moz-border-radius-bottomleft: 2px;
+  border-top-left-radius: 2px;
+  border-bottom-left-radius: 2px;
+  z-index: 1;
+}
+.skill-progress-value {
+  position: absolute;
+  right: 15px;
+  top: -20px;
+  font-size: 12px;
+  line-height: 20px;
+  color: #fff;
+  text-align: center;
+}
+/* .bars {
   width: 95%;
   float: left;
   padding: 0;
@@ -341,7 +400,7 @@ ul#nav li.current a {
   position: relative;
   margin-bottom: 60px;
   background: #ccc;
-  height: 42px;
+  height: 22px;
   border-radius: 3px;
 }
 .bars li em {
@@ -357,15 +416,18 @@ ul#nav li.current a {
   position: absolute;
   left: 0;
   top: 0;
-
   margin: 0;
   padding-right: 24px;
-  background: #313131;
+  background: #337ab7;
   display: inline-block;
-  height: 42px;
-  line-height: 42px;
   border-radius: 3px 0 0 3px;
-}
+  height: 100%;
+  -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
+  -webkit-transition: width 0.6s ease;
+  -o-transition: width 0.6s ease;
+  transition: width 0.6s ease;
+} */
 /*
 .git {
   	-moz-animation: git 2s ease;
@@ -892,11 +954,12 @@ call-to-action .button {
 
 #contact a,
 #contact a:visited {
-  color: #11abb0;
+  color: #636363;
 }
+
 #contact a:hover,
 #contact a:focus {
-  color: #fff;
+  color: #11abb0;
 }
 
 #contact h1 {
