--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -308,7 +308,8 @@ ul#nav li.current a {
   align-items: center;
 }
 .education,
-.work {
+.work,
+.skills {
   margin-bottom: 48px;
   padding-bottom: 24px;
   border-bottom: 1px solid #e8e8e8;
@@ -354,7 +355,7 @@ ul#nav li.current a {
 }
 .skill-progress {
   flex: 1;
-  max-width: 300px;
+  max-width: 40%;
   height: 10px;
   position: relative;
 }
